# NumLA

./: .gitignore  CMakeLists.txt  README.md
examples/: algorithms_example.cpp  matrix_example.cpp
include/NumLA/: algorithms.hpp  matrix.hpp
tests/: test_algorithms.cpp  test_gaussianElimination.cpp  test_matrix.cpp
